HTML practice code added

--- a/reactive-forms/src/user/user.component.html
+++ b/reactive-forms/src/user/user.component.html
@@ -1,1 +1,4 @@
 <p>user works!</p>
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam, eaque quos aliquam, soluta consequatur quam
+    cupiditate cumque excepturi eveniet similique accusamus? Et, incidunt ut alias iure nostrum dolor corporis culpa.
+</p>
