css code has been committed

--- a/reactive-forms/src/app/app.component.html
+++ b/reactive-forms/src/app/app.component.html
@@ -1,17 +1,38 @@
-<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id labore numquam odit maxime delectus voluptatum
-  consectetur, provident reprehenderit dolorem nulla recusandae deserunt tempora tenetur eos reiciendis quidem dolorum
-  explicabo omnis.</p>
-<div>
-  <input type="text" spellcheck="true">
-  </div>
-  <div>
-    <video width="300px" height="300px" controls poster="./../assets/picture.jpg">
-      <source src="./../assets/spellcheck.mp4" >
-      <source src="./../assets/spellcheck.mp4" >
-    </video>
-  </div>
-  <div>
-    <audio controls>
-      <source src="./../assets/song1.mp3">
-    </audio>
-  </div>
+<!--Html5 attributes-->
+<!-- <details>
+    <summary>Details calarifications 1:</summary>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi veniam suscipit nemo odio voluptatem, architecto
+        consequatur saepe quae harum pariatur minima natus soluta fugiat. Porro provident sed ad laudantium illum.</p>
+</details>
+<details>
+    <summary>Details calarifications 2:</summary>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi veniam suscipit nemo odio voluptatem, architecto
+        consequatur saepe quae harum pariatur minima natus soluta fugiat. Porro provident sed ad laudantium illum.</p>
+</details>
+<details>
+    <summary>Details calarifications 3:</summary>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi veniam suscipit nemo odio voluptatem, architecto
+        consequatur saepe quae harum pariatur minima natus soluta fugiat. Porro provident sed ad laudantium illum.</p>
+</details> -->
+
+<!--dropdown-->
+<!-- <div>
+    <input type="text" list="cars_list" id="list" name="cars_list">
+    <datalist id="cars_list">
+        <option value="Benz"></option>
+        <option value="Audi"></option>
+        <option value="Toyota"></option>
+        <option value="Tata"></option>
+        <option value="Volks Wagaon"></option>
+    </datalist>
+</div> -->
+
+<!--Insert and Delete-->
+<!-- <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quis saepe reprehenderit ipsam minus numquam similique
+    corrupti nemo, dicta mollitia cum aut, <del>Represent</del>, <ins>REPRESENTATION</ins> ducimus non porro? Vero soluta ipsa est excepturi.</p> -->
+
+<div class="container">
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatum, magnam sint? Doloremque corporis temporibus possimus, laudantium incidunt cum dolorem velit inventore repellat, unde commodi voluptate in libero quia! Tempora, vel.</p>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatum, magnam sint? Doloremque corporis temporibus possimus, laudantium incidunt cum dolorem velit inventore repellat, unde commodi voluptate in libero quia! Tempora, vel.</p>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatum, magnam sint? Doloremque corporis temporibus possimus, laudantium incidunt cum dolorem velit inventore repellat, unde commodi voluptate in libero quia! Tempora, vel.</p>
+</div>
